--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!-- Create a form then add button 
           inside the form -->
-        <form action="https://tsc1234.github.io/TSC.github.io/"> 
+        <form action="https://tsc1234.github.io/TSC/"> 
           <button class = "gfg" type="submit"> 
             Play! 
           </button> 
