--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
   </style>
 </head>
 <body>
-<h1 class="center">TSCplay</h1>
+<h1 class="center">████████╗███████╗ ██████╗██╗  ██╗ ██████╗ ███╗   ███╗███████╗
+╚══██╔══╝██╔════╝██╔════╝██║  ██║██╔═══██╗████╗ ████║██╔════╝
+   ██║   ███████╗██║     ███████║██║   ██║██╔████╔██║█████╗  
+   ██║   ╚════██║██║     ██╔══██║██║   ██║██║╚██╔╝██║██╔══╝  
+   ██║   ███████║╚██████╗██║  ██║╚██████╔╝██║ ╚═╝ ██║███████╗
+   ╚═╝   ╚══════╝ ╚═════╝╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝
+                                                             </h1>
 <hr>
 <hr>
 <hr>
