--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
   </style>
 </head>
 <body>
-<h1 class="center">████████╗███████╗ ██████╗██╗  ██╗ ██████╗ ███╗   ███╗███████╗
-╚══██╔══╝██╔════╝██╔════╝██║  ██║██╔═══██╗████╗ ████║██╔════╝
-   ██║   ███████╗██║     ███████║██║   ██║██╔████╔██║█████╗  
-   ██║   ╚════██║██║     ██╔══██║██║   ██║██║╚██╔╝██║██╔══╝  
-   ██║   ███████║╚██████╗██║  ██║╚██████╔╝██║ ╚═╝ ██║███████╗
-   ╚═╝   ╚══════╝ ╚═════╝╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝
-                                                             </h1>
+<h1 class="center">꓄ꌗꉓꃅꂦꂵꍟ   </h1>
 <hr>
 <hr>
 <hr>
