--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           inside the form -->
         <form action="https://tsc1234.github.io/TSC/"> 
           <button class = "gfg" type="submit"> 
-            Play! 
+            քʟǟʏ!
           </button> 
         </form> 
       </body> 
@@ -140,7 +140,7 @@
                 inside the form -->
               <form action="https://ssrtsc-collab-page.ssrsrrssrsrr.repl.co"> 
                 <button class = "gfg" type="submit"> 
-                  To Collab Page
+                  ȶօ ƈօʟʟǟɮ քǟɢɛ
                 </button> 
               </form> 
             </body> 
@@ -186,7 +186,7 @@
                       inside the form -->
                     <form action="https://tscscredits.tejachimmani1.repl.co/"> 
                       <button class = "gfg" type="submit"> 
-                        Credits
+                        ƈʀɛɖɨȶֆ
                       </button> 
                     </form> 
                   </body> 
