--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-<h1 class="center">꓄ꌗꉓꃅꂦꂵꍟ</h1>
+<h1 class="center">𝕋𝕊ℂ𝕙𝕠𝕞𝕖</h1>
 <hr>
 <hr>
 <hr>
@@ -89,7 +89,7 @@
           inside the form -->
         <form action="https://tsc1234.github.io/TSC/"> 
           <button class = "gfg" type="submit"> 
-            քʟǟʏ!
+            ℙ𝕝𝕒𝕪!
           </button> 
         </form> 
       </body> 
@@ -140,7 +140,7 @@
                 inside the form -->
               <form action="https://ssrtsc-collab-page.ssrsrrssrsrr.repl.co"> 
                 <button class = "gfg" type="submit"> 
-                  ȶօ ƈօʟʟǟɮ քǟɢɛ
+                  𝕋𝕠 ℂ𝕠𝕝𝕝𝕒𝕓 ℙ𝕒𝕘𝕖
                 </button> 
               </form> 
             </body> 
@@ -186,7 +186,7 @@
                       inside the form -->
                     <form action="https://tscscredits.tejachimmani1.repl.co/"> 
                       <button class = "gfg" type="submit"> 
-                        ƈʀɛɖɨȶֆ
+                        ℂ𝕣𝕖𝕕𝕚𝕥𝕤
                       </button> 
                     </form> 
                   </body> 
