--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body style="background-color: black;">
 
 <body style="background-color: black;">
-  <img src="https://media.tenor.com/3ynscP8DLZgAAAAC/the-social-club-tsc.gif" height='200p'
+  <img src="Gif.html" height='200p'
     alt="gif">
   <br>
   <!DOCTYPE html> 
