--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body style="background-color: black;">
 
 <body style="background-color: black;">
-  <img src="Gif.html" height='200p'
+  <img src="https://www.canva.com/design/DAF1APQp-m4/watch" height='200p'
     alt="gif">
   <br>
   <!DOCTYPE html> 
