--- a/index.html
+++ b/index.html
@@ -46,73 +46,8 @@
 
 <body style="background-color: black;">
   <img src="<body style="background-color: black;">
-  <img src="https://www.canva.com/design/DAF1APQp-m4/watch" height='200p'
-    alt="gif">" height='200p'
-    alt="gif">
-  <br>
-  <!DOCTYPE html> 
-  <html> 
-keyframes fall {
-  0% {
-    top: -50px;
-  }
-  100% {
-    top: 100vh;
-  }
-}
-
-    </style>
-  
-</a>
-
-
- 
-<!DOCTYPE html>
-<html>
-<head>
-
-<style>
-  #changing-text {
-  font-size: 20px;
-}
-
-</style>
-  
-  <script>
-    // Create an array of custom responses
-    const responses = ["Marry Christmas!", "Proton, the next gen of gaming!", "Dont do your homework, Play Proton!", "Website Made by Blake", "Kiyaan said to check news!", "Im at your door.","._.", "UwU"];
-
-    // Set a counter to keep track of which response to display
-    let counter = 0;
-
-    // Create a function to change the text
-    function changeText() {
-      // Get the element that contains the text
-      const element = document.getElementById("changing-text");
-
-      // Update the element's innerHTML with the next response
-      element.innerHTML = responses[counter];
-
-      // Increment the counter
-      counter = (counter + 1) % responses.length;
-    }
-
-    // Set an interval to call the changeText() function every 20 seconds
-    setInterval(changeText, 5000);
-  </script>
-</head>
-<body onload="changeText()">
-<div class="snowflakes">
-    <div class="snowflake"></div>
-    <div class="snowflake"></div>
-    <div class="snowflake"></div>
-    </div>
-</body>
-</html>
-  <head> 
-    <title> 
-      <!DOCTYPE html> 
-      <html> 
+    <img src="https://media.tenor.com/3ynscP8DLZgAAAAC/the-social-club-tsc.gif" height='200p'
+      alt="gif">
 
       <head> 
         <title> 
