--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <!-- Create a form then add button 
           inside the form -->
-        <form action="https://tsc1234.github.io/TSC/"> 
+        <form action="https://aspenmountain123.github.io/TSC/"> 
           <button class = "gfg" type="submit"> 
             ℙ𝕝𝕒𝕪!
           </button> 
