--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <title>TSC-Entertainment Center</title>
 <!DOCTYPE html>
-
+<div class="banner">
+  <div>
+    <h1></h1>
+    <h5>New Games Every Week</h5>
+    <button>Plz Explore</button>
+  </div>  
+</div>
 <html>
 <head>
   <style>
