--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <title>TSC-Entertainment Center</title>
 <!DOCTYPE html>
-<div class="banner">
-  <div>
-    <h1></h1>
-    <h1>New Games Every Week</h1>
-    <button>Plz Explore</button>
-  </div>  
+<div class="header">
+  <h1>a note from TSC</h1>
+  <p>New Games Every 2 days!! Hope you enjoy!</p>
+</div>
 </div>
 <html>
 <head>
