--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <title>TSC-Entertainment Center</title>
-<!DOCTYPE html>
-<div class="header">
-  <h1>a note from TSC</h1>
-  <p>New Games Every 2 days!! Hope you enjoy!</p>
-</div>
-</div>
+
 <html>
 <head>
   <style>
@@ -52,7 +47,7 @@
   <img src="<body style="background-color: black;">
     <img src="https://media.tenor.com/3ynscP8DLZgAAAAC/the-social-club-tsc.gif" height='200p'
       alt="gif">
-
+<a href="https://www.canva.com/design/DAF1ACxgxs8/watch">Click here to get my video logo!</a>
       <head> 
         <title> 
           Create an HTML button that 
