--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 <body style="background-color: black;">
   <img src="<body style="background-color: black;">
-    <img src="https://media.tenor.com/3ynscP8DLZgAAAAC/the-social-club-tsc.gif" height='200p'
+    <img src="https://snipboard.io/YR2WEB.jpg" height='200p'
       alt="gif">
-<a href="https://www.canva.com/design/DAF1ACxgxs8/watch">Click here to get my video logo!</a>
+<a 
       <head> 
         <title> 
           Create an HTML button that 
